fix(game): correct solo-game finish guard, pin spawn order with a golden test
Review round 1 findings:
- F1: the finished guard (participantIds.size() > 1 && positions.size()
  <= 1) never fired for a 1-participant game, so a solo player's own
  elimination left the tick loop running forever. Split into two
  clauses: empty positions always ends the game; "one survivor left"
  only applies to games that started with more than one participant.
- F2: spawningIsDrivenByTheSeedAndIsRepeatable only compared two live
  games against each other, so it passed under any deterministic
  behavior (including wrong column order or no spawning at all).
  Replaced with a golden assertion (seed 12345, tick 0 -> obstacle at
  column 11) derived by hand from the xorshift32 sequence, independent
  of DodgeGame's own output. Kept a renamed repeatability check
  alongside it.
- F3: DodgeFrame.positions was built via Map.copyOf(positions), whose
  iteration order is a per-JVM-run salt despite the source being a
  LinkedHashMap. Now copies into a LinkedHashMap and wraps it
  unmodifiable, so replay/serialization order is stable. Also dropped
  the unreachable putIfAbsent fallback in finalRanks() - both
  constructor paths already guarantee every participant is ranked.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>